tree-sitter-groovy/test/corpus/expressions-command-chain.txt
==================
Command chain with string argument
==================

println 'hello'

---

(source_file
  (command_chain
    receiver: (identifier)
    argument: (string_literal)))

==================
Command chain with number
==================

retry 3

---

(source_file
  (command_chain
    receiver: (identifier)
    argument: (number_literal)))

==================
Command chain with boolean
==================

enabled true

---

(source_file
  (command_chain
    receiver: (identifier)
    argument: (boolean_literal)))

==================
Command chain with null
==================

reset null

---

(source_file
  (command_chain
    receiver: (identifier)
    argument: (null_literal)))

==================
Command chain with closure argument
==================

times { x }

---

(source_file
  (command_chain
    receiver: (identifier)
    argument: (closure
      (expression_statement (identifier)))))

==================
Subscript still parses as subscript
==================

arr[0]

---

(source_file
  (expression_statement
    (subscript_expression
      object: (identifier)
      index: (number_literal))))

==================
Two identifiers still parse as two statements
==================

foo
bar

---

(source_file
  (expression_statement (identifier))
  (expression_statement (identifier)))

==================
Command chain with multiple string arguments
==================

events 'passed', 'failed', 'skipped'

---

(source_file
  (command_chain
    receiver: (identifier)
    argument: (string_literal)
    argument: (string_literal)
    argument: (string_literal)))

==================
Command chain with mixed argument types
==================

log 'starting', 42, true

---

(source_file
  (command_chain
    receiver: (identifier)
    argument: (string_literal)
    argument: (number_literal)
    argument: (boolean_literal)))

==================
Named-argument command chain
==================

archiveArtifacts artifacts: 'build/**/*'

---

(source_file
  (command_chain
    receiver: (identifier)
    argument: (named_argument
      key: (identifier)
      value: (string_literal))))

==================
Named-argument command chain, multiple arguments
==================

sh script: 'ls -la', returnStdout: true

---

(source_file
  (command_chain
    receiver: (identifier)
    argument: (named_argument
      key: (identifier)
      value: (string_literal))
    argument: (named_argument
      key: (identifier)
      value: (boolean_literal))))

==================
Plain two-identifier line is not a command (regression: agent any)
==================

agent any

---

(source_file
  (expression_statement (identifier))
  (expression_statement (identifier)))
